# HuffmanCompress

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
FileStream/: File.h  FileFormat.h  FileHeadReader.cpp  FileHeadReader.h  FileHeadWriter.cpp  FileHeadWriter.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  sysdetect.h
FileTaskPool/: convertTask.h  threadPool.cpp  threadPool.h
huffman/: Stack.h  bitstream.h  huffmantree.cpp  huffmantree.h
logger/: Logger.cpp  Logger.h
task/: Handler.cpp  bmpHandler.h  hufHandler.h  submit_convertTask.h
test/: compare_images.cpp  compare_results.txt  compare_two_paths.cpp  create_test_bmp.cpp  huffman_test.cpp  memory_test.cpp  simple_compare.cpp  simple_decode_test.cpp  simple_test.cpp  test.cpp  test_compression_ratio.cpp  test_huf_structure.cpp  test_reproduce_issue.cpp
test_resources/: test.bmp.temp.huf  test1_compressed.huf  test_compressed.huf  test_header.huf  test_structure.huf
